--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^3.10.0
   cloud_firestore: ^5.6.1
   google_fonts: ^6.2.1
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
